/*
Copyright IBM Corp. All Rights Reserved.

SPDX-License-Identifier: Apache-2.0
*/

syntax = "proto3";

package receiver;

import "trantorpb/trantorpb.proto";

option go_package = "github.com/filecoin-project/mir/pkg/transactionreceiver";

service TransactionReceiver {
  rpc Listen(stream trantorpb.Transaction) returns(ByeBye);
}

message ByeBye {
}
